corse issue solved

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-VITE_BACKEND_URL=https://jobplus-backend.vercel.app/
+# VITE_BACKEND_URL=https://jobplus-backend.vercel.app/
+VITE_BACKEND_URL=http://localhost:5000/
 
 
-https://jobplus-backend-production.up.railway.app/
+# https://jobplus-backend-production.up.railway.app/
